--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:tools="http://schemas.android.com/tools" package="com.example.kotlin_timer">
+          xmlns:tools="http://schemas.android.com/tools"
+          package="com.example.kotlin_timer">
 
     <application
             android:allowBackup="true"
@@ -8,7 +9,22 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme" tools:ignore="GoogleAppIndexingWarning">
+            android:theme="@style/AppTheme"
+            tools:ignore="GoogleAppIndexingWarning">
+
+
+        <activity android:name=".SettingsActivity"
+        android:label="Settings"
+        android:parentActivityName=".MainActivity"
+        android:theme="@style/PreferenceThemeOverlay">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.kotlin_timer.MainActivity"/>
+        </activity>
+
+
+
+
         <receiver
                 android:name=".TimerNotificationActionReceiver"
                 android:enabled="true"
